--- a/benchmarks.yml
+++ b/benchmarks.yml
@@ -15,3 +15,5 @@ tests:
     work:
       - name: jared
         source: './daily-coding/118/jared.py'
+      - name: cody
+        source: './daily-coding/118/cody.py'
