Added benchmark and more tests to Jared's.

--- a/benchmarks.yml
+++ b/benchmarks.yml
@@ -15,3 +15,5 @@ tests:
     work:
       - name: jared
         source: './daily-coding/121/jared.py'
+      - name: cody
+        source: './daily-coding/121/cody.py'
